--- a/index.html
+++ b/index.html
@@ -1,8 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css"
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title> Meu primeiro Git</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <header>
+    <h1> alunos participantes</h1>
+    <p>Gabriel, Andre e Francisco</p>
+    <img src="img/.jpg">
+  </header>
+  <nav>
+    <ul>
+      <ul>
+  <li>Menu</li>
+  <li>Prática</li>
+  <li>Sobre</li>
+</ul>
+  </nav>
+  <section>
+    <p>o Git, um Sistema de Controle de Versão (SCV ou VCS em inglês) que nos permite controlar as mudanças ocorridas nos arquivos de forma segura. <b>
+      Com ele podemos persistir mudanças no código e voltar atrás quando for necessário sem precisar fazer cópias manuais.</p>
+  </section>
+    <article>
+      <p>O GitHub é um serviço web de hospedagem de código que possibilita o controle de versão de projetos de software. <br>
+        Construído sobre o Git, esse serviço abstrai do programador questões de infraestrutura, disponibilizando em um servidor web os seus projetos, 
+        de modo que você ou uma equipe (centralizada ou distribuída), possa trabalhar no mesmo projeto a partir de um controle de versão rápido e simples.</p>
+      <img src="img/.jpg">
+    </article>
+    <footer>
+      <span>
+      </span>
+    </footer>
+    
 </body>
 </html>
